Prove selezione comando a scelta dell'utente

--- a/app/src/main/res/layout/activity_change_card_view.xml
+++ b/app/src/main/res/layout/activity_change_card_view.xml
@@ -46,20 +46,6 @@
         app:layout_constraintGuide_percent="0.55"/>
 
 
-    <Button
-        android:id="@+id/btnSpeed2"
-        android:layout_width="64dp"
-        android:layout_height="32dp"
-        android:onClick="setTimeoutProgress"
-        android:text="progress"
-        android:textSize="7sp"
-        card_view:layout_constraintBottom_toTopOf="@+id/guideline0.15"
-        card_view:layout_constraintEnd_toStartOf="@+id/delayms2"
-        card_view:layout_constraintHorizontal_bias="0.49"
-        card_view:layout_constraintStart_toStartOf="parent"
-        card_view:layout_constraintTop_toTopOf="parent"
-        card_view:layout_constraintVertical_bias="0.756" />
-
     <com.mikhaellopez.circularprogressbar.CircularProgressBar
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
@@ -74,7 +60,7 @@
 
     <TextView
         android:id="@+id/rpm"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal|center_vertical"
         android:textAlignment="center"
@@ -92,46 +78,6 @@
         card_view:layout_constraintEnd_toEndOf="parent"
         card_view:layout_constraintStart_toStartOf="@+id/guidelineVertical0.55"
         card_view:layout_constraintTop_toTopOf="@+id/guideline0.15" />
-
-    <TextView
-        android:id="@+id/tempOut"
-        android:layout_width="60dp"
-        android:layout_height="20dp"
-        android:textAlignment="center"
-        android:textSize="18sp"
-        card_view:layout_constraintBottom_toTopOf="@+id/guideline0.15"
-        card_view:layout_constraintEnd_toEndOf="parent"
-        card_view:layout_constraintHorizontal_bias="0.95"
-        card_view:layout_constraintStart_toStartOf="@+id/guidelineVertical0.5"
-        card_view:layout_constraintTop_toTopOf="parent"
-        card_view:layout_constraintVertical_bias="0.05" />
-
-    <Button
-        android:id="@+id/btnDTC"
-        android:layout_width="64dp"
-        android:layout_height="32dp"
-        android:onClick="setTimeout"
-        android:text="Timeout"
-        android:textSize="8sp"
-        card_view:layout_constraintBottom_toTopOf="@+id/btnSpeed2"
-        card_view:layout_constraintEnd_toStartOf="@+id/delayms"
-        card_view:layout_constraintHorizontal_bias="0.49"
-        card_view:layout_constraintStart_toStartOf="parent"
-        card_view:layout_constraintTop_toTopOf="parent"
-        card_view:layout_constraintVertical_bias="0.481" />
-
-    <Button
-        android:id="@+id/btnSpeed"
-        android:layout_width="64dp"
-        android:layout_height="32dp"
-        android:onClick="speedactivity"
-        android:text="speed"
-        android:textSize="8sp"
-        card_view:layout_constraintBottom_toTopOf="@+id/guideline0.15"
-        card_view:layout_constraintEnd_toEndOf="parent"
-        card_view:layout_constraintHorizontal_bias="0.2"
-        card_view:layout_constraintStart_toStartOf="@+id/guidelineVertical0.5"
-        card_view:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/delayms"
@@ -413,29 +359,29 @@
     </android.support.v7.widget.CardView>
 
     <Button
-        android:id="@+id/buttonGraph"
+        android:id="@+id/clear"
         android:layout_width="64dp"
         android:layout_height="32dp"
-        android:onClick="graphActivity"
-        android:text="Graph"
+        android:onClick="cancella"
+        android:text="Cancella"
+        android:textSize="8sp"
+        card_view:layout_constraintBottom_toTopOf="@+id/guideline0.15"
+        card_view:layout_constraintEnd_toStartOf="@+id/write"
+        card_view:layout_constraintStart_toStartOf="@+id/guidelineVertical0.55"
+        card_view:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/write"
+        android:layout_width="64dp"
+        android:layout_height="32dp"
+        android:onClick="salva"
+        android:text="Salva"
         android:textSize="8sp"
         card_view:layout_constraintBottom_toTopOf="@+id/guideline0.15"
         card_view:layout_constraintEnd_toEndOf="parent"
-        card_view:layout_constraintStart_toEndOf="@+id/btnSpeed"
-        card_view:layout_constraintTop_toBottomOf="@+id/tempOut"
-        card_view:layout_constraintVertical_bias="0.25" />
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="64dp"
-        android:layout_height="32dp"
-        android:onClick="setting"
-        android:text="Setting"
-        android:textSize="8sp"
-        card_view:layout_constraintBottom_toTopOf="@+id/btnSpeed"
-        card_view:layout_constraintEnd_toStartOf="@+id/tempOut"
-        card_view:layout_constraintHorizontal_bias="0.89"
+        card_view:layout_constraintHorizontal_bias="1.0"
         card_view:layout_constraintStart_toStartOf="@+id/guidelineVertical0.55"
         card_view:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
 
