--- a/app/src/main/res/layout/obd_activity.xml
+++ b/app/src/main/res/layout/obd_activity.xml
@@ -69,19 +69,20 @@
         card_view:cpb_progressbar_color="#3f51b5"
         card_view:cpb_progressbar_width="10dp"
         card_view:layout_constraintBottom_toBottomOf="@+id/guideline0.4"
+        card_view:layout_constraintEnd_toStartOf="@+id/guidelineVertical0.5"
         card_view:layout_constraintStart_toStartOf="parent"
         card_view:layout_constraintTop_toTopOf="@+id/guideline0.15" />
 
     <TextView
         android:id="@+id/rpm"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:gravity="center_horizontal|center_vertical"
         android:textAlignment="center"
         android:textSize="28sp"
         card_view:layout_constraintBottom_toTopOf="@+id/guideline0.4"
         card_view:layout_constraintEnd_toEndOf="@+id/progressBar"
-        card_view:layout_constraintStart_toStartOf="parent"
+        card_view:layout_constraintStart_toStartOf="@+id/progressBar"
         card_view:layout_constraintTop_toTopOf="@+id/guideline0.15" />
 
     <com.github.anastr.speedviewlib.SpeedView
@@ -203,11 +204,11 @@
                 android:layout_height="0dp"
                 android:gravity="center"
                 android:textAlignment="center"
-                android:textSize="24sp"
+                android:textSize="20sp"
                 card_view:layout_constraintBottom_toBottomOf="parent"
                 card_view:layout_constraintEnd_toEndOf="parent"
                 card_view:layout_constraintStart_toStartOf="parent"
-                card_view:layout_constraintTop_toBottomOf="@+id/txt1Card1" />
+                card_view:layout_constraintTop_toTopOf="parent" />
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 
@@ -229,7 +230,6 @@
                 android:id="@+id/txt1Card2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Temperatura Refrigerante"
                 android:textAlignment="center"
                 card_view:layout_constraintBottom_toBottomOf="parent"
                 card_view:layout_constraintEnd_toEndOf="parent"
@@ -244,11 +244,11 @@
                 android:layout_height="0dp"
                 android:gravity="center"
                 android:textAlignment="center"
-                android:textSize="24sp"
+                android:textSize="20sp"
                 card_view:layout_constraintBottom_toBottomOf="parent"
                 card_view:layout_constraintEnd_toEndOf="parent"
                 card_view:layout_constraintStart_toStartOf="parent"
-                card_view:layout_constraintTop_toBottomOf="@+id/txt1Card2" />
+                card_view:layout_constraintTop_toTopOf="parent" />
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 
@@ -270,7 +270,6 @@
                 android:id="@+id/txt1Card3"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Consumo Medio in sviluppo"
                 android:textAlignment="center"
                 card_view:layout_constraintBottom_toBottomOf="parent"
                 card_view:layout_constraintEnd_toEndOf="parent"
@@ -284,11 +283,11 @@
                 android:layout_height="0dp"
                 android:gravity="center"
                 android:textAlignment="center"
-                android:textSize="24sp"
+                android:textSize="20sp"
                 card_view:layout_constraintBottom_toBottomOf="parent"
                 card_view:layout_constraintEnd_toEndOf="parent"
                 card_view:layout_constraintStart_toStartOf="parent"
-                card_view:layout_constraintTop_toBottomOf="@+id/txt1Card3" />
+                card_view:layout_constraintTop_toTopOf="parent" />
 
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
@@ -324,11 +323,11 @@
                 android:layout_height="0dp"
                 android:gravity="center"
                 android:textAlignment="center"
-                android:textSize="24sp"
+                android:textSize="20sp"
                 card_view:layout_constraintBottom_toBottomOf="parent"
                 card_view:layout_constraintEnd_toEndOf="parent"
                 card_view:layout_constraintStart_toStartOf="parent"
-                card_view:layout_constraintTop_toBottomOf="@+id/txt1Card4" />
+                card_view:layout_constraintTop_toTopOf="parent" />
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 
@@ -350,7 +349,6 @@
                 android:id="@+id/txt1Card5"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Mass Air Flow"
                 android:textAlignment="center"
                 card_view:layout_constraintBottom_toBottomOf="parent"
                 card_view:layout_constraintEnd_toEndOf="parent"
@@ -364,11 +362,11 @@
                 android:layout_height="0dp"
                 android:gravity="center"
                 android:textAlignment="center"
-                android:textSize="24sp"
+                android:textSize="20sp"
                 card_view:layout_constraintBottom_toBottomOf="parent"
                 card_view:layout_constraintEnd_toEndOf="parent"
                 card_view:layout_constraintStart_toStartOf="parent"
-                card_view:layout_constraintTop_toBottomOf="@+id/txt1Card5" />
+                card_view:layout_constraintTop_toTopOf="parent" />
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 
@@ -390,7 +388,6 @@
                 android:id="@+id/txt1Card6"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Posizione acceleratore"
                 android:textAlignment="center"
                 card_view:layout_constraintBottom_toBottomOf="parent"
                 card_view:layout_constraintEnd_toEndOf="parent"
@@ -404,11 +401,11 @@
                 android:layout_height="0dp"
                 android:gravity="center"
                 android:textAlignment="center"
-                android:textSize="24sp"
+                android:textSize="20sp"
                 card_view:layout_constraintBottom_toBottomOf="parent"
                 card_view:layout_constraintEnd_toEndOf="parent"
                 card_view:layout_constraintStart_toStartOf="parent"
-                card_view:layout_constraintTop_toBottomOf="@+id/txt1Card6" />
+                card_view:layout_constraintTop_toTopOf="parent" />
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 
