Fix errore Toolbar
Risolto il problema che non permetteva l'inflater di una toolbar nell'applicazione spostando la classe di connessione bluetooth e cambiando delle istruzioni nell'adapter, in quando la classe era chiamata dall'adapter, mentre ora la classe della connessione è chiamata dal MainActivity il quale permette la toolbar
Fix vari e aggiunta menù

--- a/app/src/main/res/layout/obd_activity.xml
+++ b/app/src/main/res/layout/obd_activity.xml
@@ -434,5 +434,18 @@
         card_view:layout_constraintHorizontal_bias="0.89"
         card_view:layout_constraintStart_toStartOf="@+id/guidelineVertical0.55"
         card_view:layout_constraintTop_toTopOf="parent" />
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        card_view:layout_constraintBottom_toBottomOf="parent"
+        card_view:layout_constraintEnd_toEndOf="parent"
+        card_view:layout_constraintStart_toStartOf="parent"
+        card_view:layout_constraintTop_toTopOf="parent"
+        card_view:layout_constraintVertical_bias="0.0" />
 </android.support.constraint.ConstraintLayout>
 
