--- a/app/src/main/res/layout/obd_activity.xml
+++ b/app/src/main/res/layout/obd_activity.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,61 +8,49 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline0.15"
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline0.1"
         android:layout_width="1dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.15"/>
-    <android.support.constraint.Guideline
+        app:layout_constraintGuide_percent="0.1"
+        card_view:layout_constraintGuide_end="658dp" />
+    <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline0.4"
         android:layout_width="1dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.4"/>
-    <android.support.constraint.Guideline
+    <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline0.6"
         android:layout_width="1dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.6"/>
-    <android.support.constraint.Guideline
+    <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline0.8"
         android:layout_width="1dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.8"/>
-    <android.support.constraint.Guideline
+    <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineVertical0.5"
         android:layout_width="1dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.5"/>
-    <android.support.constraint.Guideline
+
+    <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineVertical0.55"
         android:layout_width="1dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.55"/>
+        app:layout_constraintGuide_percent="0.52" />
 
-
-    <Button
-        android:id="@+id/btnSpeed2"
-        android:layout_width="64dp"
-        android:layout_height="32dp"
-        android:onClick="setTimeoutProgress"
-        android:text="progress"
-        android:textSize="7sp"
-        card_view:layout_constraintBottom_toTopOf="@+id/guideline0.15"
-        card_view:layout_constraintEnd_toStartOf="@+id/delayms2"
-        card_view:layout_constraintHorizontal_bias="0.49"
-        card_view:layout_constraintStart_toStartOf="parent"
-        card_view:layout_constraintTop_toTopOf="parent"
-        card_view:layout_constraintVertical_bias="0.756" />
 
     <com.mikhaellopez.circularprogressbar.CircularProgressBar
         android:id="@+id/progressBar"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         card_view:cpb_background_progressbar_color="#b6bbd8"
         card_view:cpb_background_progressbar_width="5dp"
@@ -71,7 +59,7 @@
         card_view:layout_constraintBottom_toBottomOf="@+id/guideline0.4"
         card_view:layout_constraintEnd_toStartOf="@+id/guidelineVertical0.5"
         card_view:layout_constraintStart_toStartOf="parent"
-        card_view:layout_constraintTop_toTopOf="@+id/guideline0.15" />
+        card_view:layout_constraintTop_toTopOf="@+id/guideline0.1" />
 
     <TextView
         android:id="@+id/rpm"
@@ -81,9 +69,9 @@
         android:textAlignment="center"
         android:textSize="28sp"
         card_view:layout_constraintBottom_toTopOf="@+id/guideline0.4"
-        card_view:layout_constraintEnd_toEndOf="@+id/progressBar"
-        card_view:layout_constraintStart_toStartOf="@+id/progressBar"
-        card_view:layout_constraintTop_toTopOf="@+id/guideline0.15" />
+        card_view:layout_constraintEnd_toStartOf="@+id/guidelineVertical0.5"
+        card_view:layout_constraintStart_toStartOf="parent"
+        card_view:layout_constraintTop_toTopOf="@+id/guideline0.1" />
 
     <com.github.anastr.speedviewlib.SpeedView
         android:id="@+id/speedView2"
@@ -91,90 +79,11 @@
         android:layout_height="0dp"
         card_view:layout_constraintBottom_toBottomOf="@+id/guideline0.4"
         card_view:layout_constraintEnd_toEndOf="parent"
-        card_view:layout_constraintStart_toStartOf="@+id/guidelineVertical0.5"
-        card_view:layout_constraintTop_toTopOf="@+id/guideline0.15" />
-
-    <TextView
-        android:id="@+id/tempOut"
-        android:layout_width="60dp"
-        android:layout_height="20dp"
-        android:textAlignment="center"
-        android:textSize="18sp"
-        card_view:layout_constraintBottom_toTopOf="@+id/guideline0.15"
-        card_view:layout_constraintEnd_toEndOf="parent"
-        card_view:layout_constraintHorizontal_bias="0.95"
-        card_view:layout_constraintStart_toStartOf="@+id/guidelineVertical0.5"
-        card_view:layout_constraintTop_toTopOf="parent"
-        card_view:layout_constraintVertical_bias="0.65999997" />
-
-    <Button
-        android:id="@+id/btnDTC"
-        android:layout_width="64dp"
-        android:layout_height="32dp"
-        android:onClick="setTimeout"
-        android:text="Timeout"
-        android:textSize="8sp"
-        card_view:layout_constraintBottom_toTopOf="@+id/btnSpeed2"
-        card_view:layout_constraintEnd_toStartOf="@+id/delayms"
-        card_view:layout_constraintHorizontal_bias="0.49"
-        card_view:layout_constraintStart_toStartOf="parent"
-        card_view:layout_constraintTop_toTopOf="parent"
-        card_view:layout_constraintVertical_bias="0.481" />
-
-    <Button
-        android:id="@+id/btnSpeed"
-        android:layout_width="64dp"
-        android:layout_height="32dp"
-        android:onClick="speedactivity"
-        android:text="speed"
-        android:textSize="8sp"
-        card_view:layout_constraintBottom_toTopOf="@+id/guideline0.15"
-        card_view:layout_constraintEnd_toEndOf="parent"
-        card_view:layout_constraintHorizontal_bias="0.2"
-        card_view:layout_constraintStart_toStartOf="@+id/guidelineVertical0.5"
-        card_view:layout_constraintTop_toTopOf="parent"
-        card_view:layout_constraintVertical_bias="0.75" />
-
-    <EditText
-        android:id="@+id/delayms"
-        android:layout_width="87dp"
-        android:layout_height="37dp"
-        android:editable="true"
-        android:ems="10"
-        android:inputType="number"
-        card_view:layout_constraintBottom_toTopOf="@+id/delayms2"
-        card_view:layout_constraintEnd_toStartOf="@+id/guidelineVertical0.5"
-        card_view:layout_constraintHorizontal_bias="1.0"
-        card_view:layout_constraintStart_toStartOf="parent"
-        card_view:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/protocol"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        card_view:layout_constraintBottom_toTopOf="@+id/guideline0.15"
-        card_view:layout_constraintEnd_toEndOf="parent"
-        card_view:layout_constraintHorizontal_bias="0.0"
         card_view:layout_constraintStart_toStartOf="@+id/guidelineVertical0.55"
-        card_view:layout_constraintTop_toTopOf="parent"
-        card_view:layout_constraintVertical_bias="1.0" />
-
-    <EditText
-        android:id="@+id/delayms2"
-        android:layout_width="87dp"
-        android:layout_height="37dp"
-        android:editable="true"
-        android:ems="10"
-        android:inputType="number"
-        card_view:layout_constraintBottom_toBottomOf="@+id/guideline0.15"
-        card_view:layout_constraintEnd_toStartOf="@+id/guidelineVertical0.5"
-        card_view:layout_constraintHorizontal_bias="1.0"
-        card_view:layout_constraintStart_toStartOf="parent"
-        card_view:layout_constraintTop_toTopOf="parent"
-        card_view:layout_constraintVertical_bias="0.78" />
+        card_view:layout_constraintTop_toTopOf="@+id/guideline0.1" />
 
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/CardView1"
         card_view:cardCornerRadius="8dp"
         android:layout_width="0dp"
@@ -184,7 +93,7 @@
         card_view:layout_constraintStart_toStartOf="parent"
         card_view:layout_constraintTop_toTopOf="@+id/guideline0.4">
 
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -210,10 +119,10 @@
                 card_view:layout_constraintEnd_toEndOf="parent"
                 card_view:layout_constraintStart_toStartOf="parent"
                 card_view:layout_constraintTop_toTopOf="parent" />
-        </android.support.constraint.ConstraintLayout>
-    </android.support.v7.widget.CardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/CardView2"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -223,7 +132,7 @@
         card_view:layout_constraintTop_toTopOf="@+id/guideline0.6"
         card_view:cardCornerRadius="8dp">
 
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -250,10 +159,10 @@
                 card_view:layout_constraintEnd_toEndOf="parent"
                 card_view:layout_constraintStart_toStartOf="parent"
                 card_view:layout_constraintTop_toTopOf="parent" />
-        </android.support.constraint.ConstraintLayout>
-    </android.support.v7.widget.CardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/CardView3"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -263,7 +172,7 @@
         card_view:layout_constraintTop_toTopOf="@+id/guideline0.8"
         card_view:cardCornerRadius="8dp">
 
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -290,10 +199,10 @@
                 card_view:layout_constraintStart_toStartOf="parent"
                 card_view:layout_constraintTop_toTopOf="parent" />
 
-        </android.support.constraint.ConstraintLayout>
-    </android.support.v7.widget.CardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/CardView4"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -303,7 +212,7 @@
         card_view:layout_constraintTop_toTopOf="@+id/guideline0.4"
         card_view:cardCornerRadius="8dp">
 
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -329,10 +238,10 @@
                 card_view:layout_constraintEnd_toEndOf="parent"
                 card_view:layout_constraintStart_toStartOf="parent"
                 card_view:layout_constraintTop_toTopOf="parent" />
-        </android.support.constraint.ConstraintLayout>
-    </android.support.v7.widget.CardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/CardView5"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -342,7 +251,7 @@
         card_view:layout_constraintTop_toTopOf="@+id/guideline0.6"
         card_view:cardCornerRadius="8dp">
 
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -368,10 +277,10 @@
                 card_view:layout_constraintEnd_toEndOf="parent"
                 card_view:layout_constraintStart_toStartOf="parent"
                 card_view:layout_constraintTop_toTopOf="parent" />
-        </android.support.constraint.ConstraintLayout>
-    </android.support.v7.widget.CardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/CardView6"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -381,7 +290,7 @@
         card_view:layout_constraintTop_toTopOf="@+id/guideline0.8"
         card_view:cardCornerRadius="8dp">
 
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -407,24 +316,10 @@
                 card_view:layout_constraintEnd_toEndOf="parent"
                 card_view:layout_constraintStart_toStartOf="parent"
                 card_view:layout_constraintTop_toTopOf="parent" />
-        </android.support.constraint.ConstraintLayout>
-    </android.support.v7.widget.CardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 
-    <Button
-        android:id="@+id/buttonGraph"
-        android:layout_width="64dp"
-        android:layout_height="32dp"
-        android:onClick="graphActivity"
-        android:text="Graph"
-        android:textSize="8sp"
-        card_view:layout_constraintBottom_toTopOf="@+id/guideline0.15"
-        card_view:layout_constraintEnd_toEndOf="parent"
-        card_view:layout_constraintHorizontal_bias="0.0"
-        card_view:layout_constraintStart_toEndOf="@+id/btnSpeed"
-        card_view:layout_constraintTop_toTopOf="parent"
-        card_view:layout_constraintVertical_bias="1.0" />
-
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -436,5 +331,5 @@
         card_view:layout_constraintStart_toStartOf="parent"
         card_view:layout_constraintTop_toTopOf="parent"
         card_view:layout_constraintVertical_bias="0.0" />
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
