--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -2,7 +2,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <PreferenceCategory app:title="@string/setting_base">
-
+        <EditTextPreference
+            android:dialogTitle="Inserisci un valore"
+            android:key="customCommand"
+            android:summary="Imposta un comando custom da eseguire"
+            android:title="Comando Custom"
+            android:inputType="text"/>
     </PreferenceCategory>
 
     <PreferenceCategory app:title="@string/setting_advanced">
