--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -14,4 +14,7 @@
     <item
         android:id="@+id/grafico"
         android:title="Grafico" />
+    <item
+        android:id="@+id/dtc"
+        android:title="DTC" />
 </menu>
