Aggiunta Activity per prova tutti i comandi in una volta
Aggiunta Activity per prova tutti i comandi in una volta senza dover cambiare i comandi ogni volta, così da testare quali comandi funzionano e quali no, in modo da poter impostare più facilmente i comandi che funzionano sull'Activity principale

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -17,4 +17,7 @@
     <item
         android:id="@+id/dtc"
         android:title="DTC" />
+    <item
+        android:id="@+id/allcommand"
+        android:title="All Command" />
 </menu>
